--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
             text-align: center;
             color: #333;
         }
-        .publication {
+        ol {
+            padding-left: 20px;
+        }
+        li {
             margin-bottom: 20px;
         }
         .publication-title {
@@ -46,45 +49,41 @@
 <div class="container">
     <h1>Publications by Denis Manolescu</h1>
 
-    <div class="publication">
-        <p class="publication-title">Design of an Assistive Low-Cost 6 d.o.f. Robotic Arm with Gripper</p>
-        <p><a href="https://doi.org/10.1007/978-981-19-1607-6" target="_blank">Link to publication</a></p>
-    </div>
+    <ol>
+        <li class="publication">
+            <p class="publication-title">Design of an Assistive Low-Cost 6 d.o.f. Robotic Arm with Gripper</p>
+            <p><a href="https://doi.org/10.1007/978-981-19-1607-6" target="_blank">Link to publication</a></p>
+        </li>
+        <li class="publication">
+            <p class="publication-title">Design of a 3-DOF Robotic Arm and implementation of D-H Forward Kinematics</p>
+            <p><a href="https://doi.org/10.1007/978-981-19-9225-4_42" target="_blank">Link to publication</a></p>
+        </li>
+        <li class="publication">
+            <p class="publication-title">Development of a 3D Printed Biologically Inspired Monoped Self-Balancing Robot</p>
+            <p><a href="https://pubs2.ascee.org/index.php/IJRCS/article/view/841" target="_blank">Link to publication</a></p>
+        </li>
+        <li class="publication">
+            <p class="publication-title">Hardware and Software Integration of Machine Learning Vision System based on NVIDIA Jetson Nano</p>
+            <p><a href="https://doi.org/10.1007/978-3-031-54053-0_10" target="_blank">Link to publication</a></p>
+        </li>
+        <li class="publication">
+            <p class="publication-title">Convolutional Neural Network Applied to X-Ray Medical Imagery for Pneumonia Identification</p>
+            <p><a href="https://doi.org/10.1007/978-981-97-2053-8_14" target="_blank">Link to publication</a></p>
+        </li>
+        <li class="publication">
+            <p class="publication-title">Machine Learning Models for Probability Classification in Spectrographic EEG Seizures Dataset</p>
+            <p><a href="https://wseas.com/journals/articles.php?id=9521" target="_blank">Link to publication</a></p>
+        </li>
+        <li class="publication">
+            <p class="publication-title">Human–robot interaction via wearable device - A wireless glove system for remote control of 7-DoF robotic arm</p>
+            <p><a href="https://doi.org/10.20935/AcadEng7350" target="_blank">Link to publication</a></p>
+        </li>
+        <li class="publication">
+            <p class="publication-title">Design of a Dual Finger 3D Printed Gripper with a Low Cost ToF-based Force Sensor</p>
+            <p><a href="https://doi.org/10.20935/AcadEng7356" target="_blank">Link to publication</a></p>
+        </li>
+    </ol>
 
-    <div class="publication">
-        <p class="publication-title">Design of a 3-DOF Robotic Arm and implementation of D-H Forward Kinematics</p>
-        <p><a href="https://doi.org/10.1007/978-981-19-9225-4_42" target="_blank">Link to publication</a></p>
-    </div>
-
-    <div class="publication">
-        <p class="publication-title">Development of a 3D Printed Biologically Inspired Monoped Self-Balancing Robot</p>
-        <p><a href="https://pubs2.ascee.org/index.php/IJRCS/article/view/841" target="_blank">Link to publication</a></p>
-    </div>
-
-    <div class="publication">
-        <p class="publication-title">Hardware and Software Integration of Machine Learning Vision System based on NVIDIA Jetson Nano</p>
-        <p><a href="https://doi.org/10.1007/978-3-031-54053-0_10" target="_blank">Link to publication</a></p>
-    </div>
-
-    <div class="publication">
-        <p class="publication-title">Convolutional Neural Network Applied to X-Ray Medical Imagery for Pneumonia Identification</p>
-        <p><a href="https://doi.org/10.1007/978-981-97-2053-8_14" target="_blank">Link to publication</a></p>
-    </div>
-
-    <div class="publication">
-        <p class="publication-title">Machine Learning Models for Probability Classification in Spectrographic EEG Seizures Dataset</p>
-        <p><a href="https://wseas.com/journals/articles.php?id=9521" target="_blank">Link to publication</a></p>
-    </div>
-
-    <div class="publication">
-        <p class="publication-title">Human–robot interaction via wearable device - A wireless glove system for remote control of 7-DoF robotic arm</p>
-        <p><a href="https://doi.org/10.20935/AcadEng7350" target="_blank">Link to publication</a></p>
-    </div>
-
-    <div class="publication">
-        <p class="publication-title">Design of a Dual Finger 3D Printed Gripper with a Low Cost ToF-based Force Sensor</p>
-        <p><a href="https://doi.org/10.20935/AcadEng7356" target="_blank">Link to publication</a></p>
-    </div>
 </div>
 
 </body>
